--- a/原理.md
+++ b/原理.md
@@ -5,7 +5,7 @@
 - 叶子节点存储真实数据
 
 ## 建索引的原则
-- 最左前缀匹配原则，非常重要的原则，mysql会一直向右匹配直到遇到范围查询(>、<、between、like)就停止匹配
+- 最左前缀匹配原则，mysql会一直向右匹配直到遇到范围查询(>、<、between、like)就停止匹配
 - =和in可以乱序
 
 ## 参考文档
