--- a/锁.md
+++ b/锁.md
@@ -1,3 +1,12 @@
-- 记录锁。即X锁，锁定范围是行
-- 间隙锁。锁加在不存在的空闲空间，可以是两个索引记录之间，也可能是第一个索引记录之前或者最后一个索引之后的空间，两边都是开区间。
-- 临键锁。行锁与间隙锁组合起来，是一个前开后闭区间。
+## 记录锁
+即X锁，锁定范围是行
+
+## 间隙锁
+锁加在不存在的空闲空间，可以是两个索引记录之间，也可能是第一个索引记录之前或者最后一个索引之后的空间，两边都是开区间。
+
+## 临键锁
+行锁与间隙锁组合起来，是一个前开后闭区间。
+
+## MySQL在RR隔离级别下，无幻读问题
+- MVCC可以解决幻读问题。采用的是当前读，读取数据可能是旧版本
+- 显示指定临键锁，即SELECT ... FOR UPDATE/LOCK IN SHARE MODE，也可解决幻读问题。采用当前读，读取数据肯定是最新版本
