--- a/锁.md
+++ b/锁.md
@@ -10,3 +10,6 @@
 ## MySQL在RR隔离级别下，无幻读问题
 - MVCC可以解决幻读问题。采用的是当前读，读取数据可能是旧版本
 - 显示指定临键锁，即SELECT ... FOR UPDATE/LOCK IN SHARE MODE，也可解决幻读问题。采用当前读，读取数据肯定是最新版本
+
+## 参考资料
+https://blog.csdn.net/sinat_27143551/article/details/81736330
